--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />  
     <title>遂平县博宇净化工程有限公司</title>
 </head>
-<body>
 
+<body>
+    <p>遂平县博宇净化工程有限公司</p>
 </body>
+
 </html>
