--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
             text-align: center
         }
     </style>
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
-    crossorigin="anonymous"></script>
+
+    <script src="./jquery1.8.1.js"></script>
+
     <script>
         $(document).ready(function () {
             //添加图片
