--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         }
 
         header {
+            position: fixed;
             height: 60px;
             line-height: 60px;
             width: 100%;
@@ -25,10 +26,30 @@
             font-size: 20px;
             /*背景色渐变*/
             background: linear-gradient(to bottom right, #F56739, #FB9749);
+            
         }
 
         #content {
-            background: linear-gradient(to bottom right, #f5f454, #fbd1b7);
+            /* background: linear-gradient(to bottom right, #f5f454, #fbd1b7); */
+            margin: auto;
+        }
+
+        #topPlaceholder {
+            height: 60px;
+            width: 100%;
+            top: 60px;
+        }
+
+        #bottomPlaceholder {
+            height: 64px;
+            width: 100%;
+            bottom: 64px;
+            top: 0px;
+        }
+
+        img {
+            margin: 10px 10px;
+            width: 45%;
         }
 
         .menu {
@@ -36,9 +57,8 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            height: 70px;
+            height: 64px;
             color: #474747;
-            padding-top: 10px;
             border-top: 1px solid #eee;
             background-color: #fff;
         }
@@ -53,11 +73,14 @@
             height: 30px;
             width: 100%;
             line-height: 30px;
+            margin-top: 5px;
         }
 
         img.menu_img {
             height: 24px;
             width: 24px;
+            display: block;
+            margin: 5px auto;
         }
 
         img {
@@ -81,7 +104,7 @@
             //添加图片
             $("div .subMenu>img").each(function () {
                 var name = $(this).attr("data-imgname");
-                var src = name + ".png"
+                var src = "./images/" + name + ".png"
                 //设置img的属性和值。
                 $(this).attr("src", src);
             });
@@ -92,7 +115,7 @@
                 var $img = $(".active>img");
                 //返回被选元素的属性值
                 var name = $img.attr("data-imgname");
-                var src = name + ".png";
+                var src = "./images/" + name + ".png"
                 $img.attr("src", src);
                 $(".active").removeClass("active");
 
@@ -101,7 +124,7 @@
                 //找到所有 div(subMenu) 的子元素(img)
                 $img = $(this).children("img");
                 name = $img.attr("data-imgname");
-                src = name + ".png";
+                src = "./images/" + name + ".png"
                 //设置img的属性和值。
                 $img.attr("src", src);
 
@@ -113,11 +136,12 @@
             });
             // 自动点击第一个菜单
             $("div .subMenu")[0].click();
+            // initSize();
         });
 
         /*content高度*/
         function initSize() {
-            var height = $(window).height() - $("header").height() - $("#description").height() - $("#menu").height();
+            var height = $(window).height() - $("header").height() - $("#menu").height();
             $("#content").height(height + "px");
         }
     </script>
@@ -125,14 +149,29 @@
 
 <body>
     <header class="text-center">博宇净化工程有限公司</header>
-    <div id="content"></div>
+    <div id="topPlaceholder"></div>
+    <div id="content">
+        <img src="./images/1.jpg">
+        <img src="./images/2.jpg">
+        <img src="./images/3.jpg">
+        <img src="./images/4.jpg">
+        <img src="./images/1.jpg">
+        <img src="./images/2.jpg">
+        <img src="./images/3.jpg">
+        <img src="./images/4.jpg">
+        <img src="./images/1.jpg">
+        <img src="./images/2.jpg">
+        <img src="./images/3.jpg">
+        <img src="./images/4.jpg">
+    </div>
+    <div id="bottomPlaceholder"></div>
     <div id="menu" class="menu">
         <div id="one" class="subMenu text-center" data-src="constructionSite.html">
-            <img class="menu_img" data-imgname="1">
+            <img class="menu_img" data-imgname="printWeb">
             <div class="menu_name">施工现场</div>
         </div>
         <div id="two" class="subMenu text-center" data-src="instruction.html">
-            <img class="menu_img" data-imgname="2">
+            <img class="menu_img" data-imgname="company">
             <div class="menu_name">公司简介</div>
         </div>
         <!-- <div id="three" class="subMenu text-center" data-src="personal.html">
