--- a/ constructionSite.html
+++ b/ constructionSite.html
@@ -10,6 +10,18 @@
 
 <body>
     <h1>施工现场图片</h1>
+    <img src="./images/1.jpg">
+    <img src="./images/2.jpg">
+    <img src="./images/3.jpg">
+    <img src="./images/4.jpg">
+    <img src="./images/1.jpg">
+    <img src="./images/2.jpg">
+    <img src="./images/3.jpg">
+    <img src="./images/4.jpg">
+    <img src="./images/1.jpg">
+    <img src="./images/2.jpg">
+    <img src="./images/3.jpg">
+    <img src="./images/4.jpg">
 </body>
 
 </html>
