--- a/csite.html
+++ b/csite.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style type="text/css"></style>
     <script></script>
 </head>
 
 <body>
     <h1>施工现场图片</h1>
-    <img src="./images/1.jpg">
+    <!-- <img src="./images/1.jpg">
     <img src="./images/2.jpg">
     <img src="./images/3.jpg">
     <img src="./images/4.jpg">
@@ -21,7 +20,7 @@
     <img src="./images/1.jpg">
     <img src="./images/2.jpg">
     <img src="./images/3.jpg">
-    <img src="./images/4.jpg">
+    <img src="./images/4.jpg"> -->
 </body>
 
 </html>
