--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 
         img {
             margin: 10px 10px;
-            padding: 0;
         }
 
         .menu {
@@ -140,7 +139,7 @@
             });
             // 自动点击第一个菜单
             $("div .subMenu")[0].click();
-            initSize();
+            // initSize();
         });
 
         /*content高度*/
