--- a/instruction.html
+++ b/instruction.html
@@ -9,6 +9,12 @@
 
 <body>
     <h3>公司介绍</h3>
+    <p> 遂平博宇净化工程有限公司主要经营：空气净化工程、机电设备工程安装、室内外装饰、机械设备、电子设备、建筑材料/销售
+        我公司有完善的质量保证体系，通过了所有合作伙伴的高标准质检及认可。为开拓市场，
+        实现互惠互利，我们将本着“价格，质量”双优，“诚信，服务”共赢的经营理念，
+        竭诚为广大客户服务。我们公司本着“不争价格最低，但求质量最好”的原则，
+        竭诚为客户提供优质诚信的服务。
+    </p>
 </body>
 
 </html>
