--- a/csite.html
+++ b/csite.html
@@ -9,18 +9,12 @@
 
 <body>
     <h3>施工案例</h3>
-    <img src="./images/1.jpg">
-    <img src="./images/2.jpg">
-    <img src="./images/3.jpg">
-    <img src="./images/4.jpg">
-    <img src="./images/1.jpg">
-    <img src="./images/2.jpg">
-    <img src="./images/3.jpg">
-    <img src="./images/4.jpg">
-    <img src="./images/1.jpg">
-    <img src="./images/2.jpg">
-    <img src="./images/3.jpg">
-    <img src="./images/4.jpg">
+    <img src="./images/boyu1.jpeg">
+    <img src="./images/boyu2.jpeg">
+    <img src="./images/boyu3.jpeg">
+    <img src="./images/boyu4.jpeg">
+    <img src="./images/boyu5.jpeg">
+    <img src="./images/boyu6.jpeg">
 </body>
 
 </html>
