--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
     <title>遂平县博宇净化工程有限公司</title>
     <style type="text/css">
         * {
@@ -27,7 +27,7 @@
             text-align: center;
             /*背景色渐变*/
             background: linear-gradient(to bottom right, #F56739, #FB9749);
-            z-index: 9999;
+            z-index: 10;
         }
 
         #topPlaceholder {
@@ -134,14 +134,15 @@
             top: 0;
             left: 0;
             background: rgba(0, 0, 0, 0.7);
-            z-index: 2;
+            z-index: 998;
             width: 100%;
             height: 100%;
             display: none;
         }
+
     </style>
 
-    <script src="./jquery1.8.1.js"></script>
+    <script type="text/javascript" src="./jquery1.8.1.js"></script>
 
     <script>
         $(document).ready(function () {
@@ -161,6 +162,7 @@
                 var _this = $(this);//将当前的pimg元素作为_this传入函数
                 imgShow("#outerdiv", "#innerdiv", "#bigimg", _this);
             });
+
 
             //点击事件
             $("div .subMenu").click(function () {
@@ -216,24 +218,11 @@
                 var realWidth = this.width;//获取图片真实宽度
                 var realHeight = this.height;//获取图片真实高度
                 var imgWidth, imgHeight;
-                var scale = 0.8;//缩放尺寸，当图片真实宽度和高度大于窗口宽度和高度时进行缩放
-                if (realHeight > windowH * scale) {//判断图片高度
-                    imgHeight = windowH * scale;//如大于窗口高度，图片高度进行缩放
-                    imgWidth = imgHeight / realHeight * realWidth;//等比例缩放宽度
-                    if (imgWidth > windowW * scale) {//如宽度扔大于窗口宽度
-                        imgWidth = windowW * scale;//再对宽度进行缩放
-                    }
-                } else if (realWidth > windowW * scale) {//如图片高度合适，判断图片宽度
-                    imgWidth = windowW * scale;//如大于窗口宽度，图片宽度进行缩放
-                    imgHeight = imgWidth / realWidth * realHeight;//等比例缩放高度
-                } else {//如果图片真实高度和宽度都符合要求，高宽不变
-                    imgWidth = realWidth;
-                    imgHeight = realHeight;
-                }
-                $(bigimg).css("width", imgWidth);//以最终的宽度对图片缩放
-                var w = (windowW - imgWidth) / 2;//计算图片与窗口左边距
-                var h = (windowH - imgHeight) / 2;//计算图片与窗口上边距
+                $(bigimg).css("width", windowW);//以最终的宽度对图片缩放
+                var w = 0;//计算图片与窗口左边距
+                var h = 0;//计算图片与窗口上边距
                 $(innerdiv).css({ "top": h, "left": w });//设置#innerdiv的top和left属性
+                $("#close").css({ "margin-left": ((windowW - 50.0) / 2)});
                 $(outerdiv).fadeIn("fast");//淡入显示#outerdiv及.goal_img
             });
             $(outerdiv).click(function () {//再次点击淡出消失弹出层
@@ -252,7 +241,7 @@
             <p class="csiteSubTitle">施工案例(xxx工厂)</p>
             <div class="csiteSectionContainer">
                 <figure class="imagefigure">
-                    <img src="./images/boyu1.jpeg">
+                    <img src="./images/boyu1.jpeg" data-action="zoom">
                     <figcaption>施工前</figcaption>
                 </figure>
                 <figure class="imagefigure">
@@ -309,7 +298,8 @@
 
     <div id="outerdiv" class="wrap">
         <div id="innerdiv" style="position:absolute;">
-            <img id="bigimg" style="border:5px solid #fff;" src="" />
+            <img id="bigimg" src="" />
+            <img id="close" style="width: 50px; height: 50px;" src="./images/close.png" />
         </div>
     </div>
 </body>
