--- a/index.html
+++ b/index.html
@@ -238,38 +238,46 @@
     <div id="content">
         <div id="csite">
             <!-- <h3 id="csiteHeader">施工案例</h3> -->
-            <p class="csiteSubTitle">施工案例一(xxx工厂)</p>
+            <p class="csiteSubTitle">施工案例一(中芯国际)</p>
             <div class="csiteSectionContainer">
                 <figure class="imagefigure">
                     <img src="./images/boyu1.jpeg" data-action="zoom">
-                    <figcaption>施工前</figcaption>
+                    <figcaption>中芯施工前</figcaption>
                 </figure>
                 <figure class="imagefigure">
                     <img src="./images/boyu2.jpeg">
-                    <figcaption>施工中</figcaption>
+                    <figcaption>中芯施工中</figcaption>
                 </figure>
                 <figure class="imagefigure">
                     <img src="./images/boyu3.jpeg">
-                    <figcaption>施工后</figcaption>
+                    <figcaption>中芯施工完成</figcaption>
                 </figure>
             </div>
-            <p class="csiteSubTitle">施工案例二(xxx工厂)</p>
+            <p class="csiteSubTitle">施工案例二(广州LG)</p>
             <div class="csiteSectionContainer">
                 <figure class="imagefigure">
                     <img src="./images/boyu4.jpeg">
-                    <figcaption>施工中</figcaption>
+                    <figcaption>LG施工中</figcaption>
                 </figure>
                 <figure class="imagefigure">
                     <img src="./images/boyu5.jpeg">
-                    <figcaption>施工中</figcaption>
+                    <figcaption>LG施工中</figcaption>
                 </figure>
                 <figure class="imagefigure">
                     <img src="./images/boyu6.jpeg">
-                    <figcaption>施工中</figcaption>
+                    <figcaption>LG施工中</figcaption>
                 </figure>
                 <figure class="imagefigure">
                     <img src="./images/boyu7.jpeg">
-                    <figcaption>施工中</figcaption>
+                    <figcaption>LG施工中</figcaption>
+                </figure>
+                <figure class="imagefigure">
+                    <img src="./images/boyu8.jpeg">
+                    <figcaption>LG施工中</figcaption>
+                </figure>
+                <figure class="imagefigure">
+                    <img src="./images/boyu9.jpeg">
+                    <figcaption>LG施工中</figcaption>
                 </figure>
             </div>
         </div>
