--- a/index.html
+++ b/index.html
@@ -149,10 +149,11 @@
             margin-left: -25px;
             margin-top: -25px;
         }
-
     </style>
 
     <script type="text/javascript" src="./jquery1.8.1.js"></script>
+    <script type="text/javascript" src="./zoombox/zoombox.js"></script>
+    <link href="./zoombox/zoombox.css" rel="stylesheet" type="text/css" media="screen" />
 
     <script>
         $(document).ready(function () {
@@ -168,9 +169,21 @@
                 $(this).attr("src", src);
             });
 
-            $(".imagefigure>img").click(function () {
-                var _this = $(this);//将当前的pimg元素作为_this传入函数
-                imgShow("#outerdiv", "#innerdiv", "#bigimg", _this);
+            // $(".imagefigure>img").click(function () {
+            //     var _this = $(this);//将当前的pimg元素作为_this传入函数
+            //     imgShow("#outerdiv", "#innerdiv", "#bigimg", _this);
+            // });
+
+            $('a.zoombox').zoombox({
+                theme: 'simple',        //available themes : zoombox,lightbox, prettyphoto, darkprettyphoto, simple
+                opacity: 0.8,              // Black overlay opacity
+                duration: 800,              // Animation duration
+                animation: true,             // Do we have to animate the box ?
+                width: 600,              // Default width
+                height: 400,              // Default height
+                gallery: true,             // Allow gallery thumb view
+                alignment: 'center',
+                allowMultiple: false
             });
 
 
@@ -232,8 +245,8 @@
                 var topMargin = 50;
                 windowH -= topMargin;
                 $(bigimg).css("width", windowW - 2 * marginV);//以最终的宽度对图片缩放
-                $(innerdiv).css({ "top": topMargin, "left": marginV});//设置#innerdiv的top和left属性
-                $("#closeContanier").css({"height":150, "width":"100%"});
+                $(innerdiv).css({ "top": topMargin, "left": marginV });//设置#innerdiv的top和left属性
+                $("#closeContanier").css({ "height": 150, "width": "100%" });
                 $(outerdiv).fadeIn("fast");//淡入显示#outerdiv及.goal_img
             });
             $(outerdiv).click(function () {//再次点击淡出消失弹出层
@@ -252,42 +265,42 @@
             <p class="csiteSubTitle">施工案例一(中芯国际)</p>
             <div class="csiteSectionContainer">
                 <figure class="imagefigure">
-                    <img src="./images/boyu1.jpeg" data-action="zoom">
+                    <a href="./images/boyu1.jpeg" class="zoombox"><img src="./images/boyu1.jpeg" data-action="zoom"></a>
                     <figcaption>中芯施工前</figcaption>
                 </figure>
                 <figure class="imagefigure">
-                    <img src="./images/boyu2.jpeg">
+                    <a href="./images/boyu2.jpeg" class="zoombox"><img src="./images/boyu2.jpeg"></a>
                     <figcaption>中芯施工中</figcaption>
                 </figure>
                 <figure class="imagefigure">
-                    <img src="./images/boyu3.jpeg">
+                    <a href="./images/boyu3.jpeg" class="zoombox"><img class="zoombox" src="./images/boyu3.jpeg"></a>
                     <figcaption>中芯施工完成</figcaption>
                 </figure>
             </div>
-            <p class="csiteSubTitle">施工案例二(广州LG)</p>
+            <p class="csiteSubTitle">施工案例二(广州LG)</p>
             <div class="csiteSectionContainer">
                 <figure class="imagefigure">
-                    <img src="./images/boyu4.jpeg">
+                    <a href="./images/boyu4.jpeg" class="zoombox"><img src="./images/boyu4.jpeg"></a>
                     <figcaption>LG施工中</figcaption>
                 </figure>
                 <figure class="imagefigure">
-                    <img src="./images/boyu5.jpeg">
+                    <a href="./images/boyu5.jpeg" class="zoombox"><img src="./images/boyu5.jpeg"></a>
                     <figcaption>LG施工中</figcaption>
                 </figure>
                 <figure class="imagefigure">
-                    <img src="./images/boyu6.jpeg">
+                    <a href="./images/boyu6.jpeg" class="zoombox"><img src="./images/boyu6.jpeg"></a>
                     <figcaption>LG施工中</figcaption>
                 </figure>
                 <figure class="imagefigure">
-                    <img src="./images/boyu7.jpeg">
+                    <a href="./images/boyu7.jpeg" class="zoombox"><img src="./images/boyu7.jpeg"></a>
                     <figcaption>LG施工中</figcaption>
                 </figure>
                 <figure class="imagefigure">
-                    <img src="./images/boyu8.jpeg">
+                    <a href="./images/boyu8.jpeg" class="zoombox"><img src="./images/boyu8.jpeg"></a>
                     <figcaption>LG施工中</figcaption>
                 </figure>
                 <figure class="imagefigure">
-                    <img src="./images/boyu9.jpeg">
+                    <a href="./images/boyu9.jpeg" class="zoombox"><img src="./images/boyu9.jpeg"></a>
                     <figcaption>LG施工中</figcaption>
                 </figure>
             </div>
